2005-04-09  Alexander Gottwald  <ago at freedesktop dot org>

	* indirect.c:
	Fix passing of non-RGB visuals. The old code did not initialize the
	structure properly which lead to a crash in 8bpp mode

2005-03-01  Alexander Gottwald  <ago at freedesktop dot org>

	* indirect.c:
	* glwindows.h:
	If a context is already attached copy it instead of reattaching to keep
	displaylists and share displaylists
	Enable tracing of often called functions with GLWIN_ENABLE_TRACE        
	ForceCurrent is a no-op now

2005-02-02  Alexander Gottwald  <ago at freedesktop dot org>

	* Imakefile: 
	Bugzilla #1866 (https://bugs.freedesktop.org/show_bug.cgi?id=1866)
	attachment #1819 (https://bugs.freedesktop.org/attachment.cgi?id=1819):
	Define APIENTRY on windows to prevent <GL/gl.h> from loading <windows.h>

2005-02-02  Alexander Gottwald  <ago at freedesktop dot org>

	* glwrap.c:
	* glwindows.h:
	Bugzilla #1866 (https://bugs.freedesktop.org/show_bug.cgi?id=1866)
	attachment #1818 (https://bugs.freedesktop.org/attachment.cgi?id=1818):
	Include Xwindows.h before GL/gl.h to prevent loading windows.h which
	pollutes our namespace with some symbols.    

2005-01-27  Alexander Gottwald  <ago at freedesktop dot org>

	* glwrap.c:
	Functions like glGenTextures and glBindTexture are in OpenGL 1.1
	and can be resolved at linktime.

2004-11-15  Alexander Gottwald  <ago at freedesktop dot org>

	* indirect.c:
	Bugzilla #1802, http://freedesktop.org/bugzilla/show_bug.cgi?id=1802
	Added mingw (Win32) port     

2004-08-13  Alexander Gottwald  <ago@freedesktop.org>

	* Imakefile: Added $(MESASRCDIR)/src/mesa/glapi to INCLUDES.
	Removed $(SERVERSRC)/mi from INCLUDES.
	Rearranged INCLUDES for better readability.
	* glwindows.h: Removed mipointrst.h and miscstruct.h from #include 
	since they are not used anymore.

2004-05-27  Alexander Gottwald  <ago@freedesktop.org>

	* glwindows.h: write current function and line in debug output