@@ -231,35 +231,6 @@ GLint __glGetLightiv_size(GLenum pname)
     return __glGetLightfv_size(pname);
 }
 
-static GLint EvalComputeK(GLenum target)
-{
-    switch(target) {
-      case GL_MAP1_VERTEX_4:
-      case GL_MAP1_COLOR_4:
-      case GL_MAP1_TEXTURE_COORD_4:
-      case GL_MAP2_VERTEX_4:
-      case GL_MAP2_COLOR_4:
-      case GL_MAP2_TEXTURE_COORD_4:
-	return 4;
-      case GL_MAP1_VERTEX_3:
-      case GL_MAP1_TEXTURE_COORD_3:
-      case GL_MAP1_NORMAL:
-      case GL_MAP2_VERTEX_3:
-      case GL_MAP2_TEXTURE_COORD_3:
-      case GL_MAP2_NORMAL:
-	return 3;
-      case GL_MAP1_TEXTURE_COORD_2:
-      case GL_MAP2_TEXTURE_COORD_2:
-	return 2;
-      case GL_MAP1_TEXTURE_COORD_1:
-      case GL_MAP2_TEXTURE_COORD_1:
-      case GL_MAP1_INDEX:
-      case GL_MAP2_INDEX:
-	return 1;
-    }
-    return 0;
-}
-
 GLint __glGetMap_size(GLenum target, GLenum query)
 {
     GLint k, order=0, majorMinor[2];
@@ -279,7 +250,7 @@ GLint __glGetMap_size(GLenum target, GLenum query)
       case GL_MAP1_VERTEX_4:
 	switch (query) {
 	  case GL_COEFF:
-	    k = EvalComputeK(target);
+	    k = __glMap1d_size(target);
 	    glGetMapiv(target, GL_ORDER, &order);
 	    /*
 	    ** The query above might fail, but then order will be zero anyway.
@@ -302,7 +273,7 @@ GLint __glGetMap_size(GLenum target, GLenum query)
       case GL_MAP2_VERTEX_4:
 	switch (query) {
 	  case GL_COEFF:
-	    k = EvalComputeK(target);
+	    k = __glMap2d_size(target);
 	    majorMinor[0] = majorMinor[1] = 0;
 	    glGetMapiv(target, GL_ORDER, majorMinor);
 	    /*
