@@ -117,36 +117,6 @@ const char *glWinErrorMessage(void)
  * in the OpenGL SI.
  */
 
-GLint __glEvalComputeK(GLenum target)
-{
-    switch (target) {
-        case GL_MAP1_VERTEX_4:
-        case GL_MAP1_COLOR_4:
-        case GL_MAP1_TEXTURE_COORD_4:
-        case GL_MAP2_VERTEX_4:
-        case GL_MAP2_COLOR_4:
-        case GL_MAP2_TEXTURE_COORD_4:
-            return 4;
-        case GL_MAP1_VERTEX_3:
-        case GL_MAP1_TEXTURE_COORD_3:
-        case GL_MAP1_NORMAL:
-        case GL_MAP2_VERTEX_3:
-        case GL_MAP2_TEXTURE_COORD_3:
-        case GL_MAP2_NORMAL:
-            return 3;
-        case GL_MAP1_TEXTURE_COORD_2:
-        case GL_MAP2_TEXTURE_COORD_2:
-            return 2;
-        case GL_MAP1_TEXTURE_COORD_1:
-        case GL_MAP2_TEXTURE_COORD_1:
-        case GL_MAP1_INDEX:
-        case GL_MAP2_INDEX:
-            return 1;
-        default:
-            return 0;
-    }
-}
-
 GLuint __glFloorLog2(GLuint val)
 {
     int c = 0;
