@@ -1,3 +1,9 @@
+2005-09-27  Ian Romanick  <idr@us.ibm.com>
+
+	* indirect.c:
+	Remove __glEvalComputeK.  It is no longer used.	
+
+
 2005-04-09  Alexander Gottwald  <ago at freedesktop dot org>
 
 	* indirect.c:
